Do not assume set viewport for popup panel when using portrait mode in descktop
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/2814

--- a/src/css/popup-fenix.css
+++ b/src/css/popup-fenix.css
@@ -720,7 +720,7 @@ body:not([data-more*="e"]) [data-more="e"] {
     }
 
 /* horizontally-constrained viewport */
-:root.portrait body {
+:root.portrait:not(.desktop) body {
     overflow-y: auto;
     width: 100%;
     }
