Fix bad text colors in logger for dark theme
Related feedback:
https://github.com/uBlockOrigin/uBlock-issues/discussions/1963#discussioncomment-7921578

--- a/src/css/logger-ui.css
+++ b/src/css/logger-ui.css
@@ -271,10 +271,10 @@ body[dir="rtl"] #netInspector #filterExprPicker {
     color: white;
     }
 #vwRenderer .logEntry > div[data-type="error"] {
-    color: #800;
+    color: var(--sf-error-ink);
     }
 #vwRenderer .logEntry > div[data-type="info"] {
-    color: #008;
+    color: var(--sf-def-ink);
     }
 #vwRenderer .logEntry > div.voided {
     opacity: 0.5;
