Provide visual feedback when applying changes in "Filter lists" pane
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3066#event-11479409505

--- a/src/css/3p-filters.css
+++ b/src/css/3p-filters.css
@@ -212,13 +212,14 @@ body.working #actions button {
     color: var(--info2-ink);
         fill: var(--info2-ink);
     }
-body:not(.updating) #lists .listEntry.checked.obsolete > .detailbar .iconbar .obsolete {
+body:not(.updating,.working) #lists .listEntry.checked.obsolete > .detailbar .iconbar .obsolete {
     display: inline-flex;
     }
 #lists .iconbar .updating {
     transform-origin: 50%;
     }
-body.updating #lists .listEntry.checked.obsolete > .detailbar .iconbar .updating {
+body.updating #lists .listEntry.checked.obsolete > .detailbar .iconbar .updating,
+body.working #lists .listEntry.checked.obsolete:not(.cached) > .detailbar .iconbar .updating {
     animation: spin 1s steps(8) infinite;
     display: inline-flex;
     }
