Further fine tune visual as per feedback
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3066#issuecomment-1891023881

--- a/src/css/3p-filters.css
+++ b/src/css/3p-filters.css
@@ -15,7 +15,8 @@ body {
 #buttonUpdate.active {
     pointer-events: none;
     }
-#buttonUpdate.active .fa-icon svg {
+#buttonUpdate.active .fa-icon svg,
+body.working #buttonUpdate:not(.disabled) .fa-icon svg {
     animation: spin 1s linear infinite;
     transform-origin: 50%;
     }
