Minor CSS changes in logger's 'Export' tool

--- a/src/css/logger-ui.css
+++ b/src/css/logger-ui.css
@@ -968,9 +968,9 @@ body.dirty .netFilteringDialog > div.panes > .dynamic > .toolbar #saveRules {
     }
 #loggerExportDialog .output {
     font: smaller mono;
-    height: 60vh;
+    height: 80vh;
     padding: 0.5em;
-    white-space: pre;
+    white-space: pre-wrap;
     }
 
 #loggerSettingsDialog {
