Move "Quit" button to top bar in element picker
Additionally:

- Removed auto fade out of dialog when mouse does not hover the
  dialog.
- Added a minimize/maximize button in top bar

Related issue:
- https://github.com/uBlockOrigin/uBlock-issues/issues/55

--- a/src/css/epicker-ui.css
+++ b/src/css/epicker-ui.css
@@ -13,7 +13,6 @@ html#ublock0-epicker,
 #ublock0-epicker aside {
     background-color: var(--surface-1);
     border: 1px solid var(--border-2);
-    bottom: 2px;
     box-sizing: border-box;
     cursor: default;
     display: none;
@@ -22,14 +21,21 @@ html#ublock0-epicker,
     min-width: min(24rem, 100vw - 4px);
     overflow-y: auto;
     position: fixed;
-    right: 2px;
     width: min(32rem, 100vw - 4px);
 }
 #ublock0-epicker.paused:not(.zap) aside {
     display: flex;
 }
+#ublock0-epicker.minimized aside {
+    min-width: min(16rem, 100vw - 4px);
+    overflow: hidden;
+    width: min(16rem, 100vw - 4px);
+}
+#ublock0-epicker.minimized aside > *:not(#windowbar) {
+    display: none;
+}
 #ublock0-epicker aside > *:not(:first-child) {
-    padding: 2px;
+    padding: 0 2px;
 }
 
 #ublock0-epicker #toolbar {
@@ -42,16 +48,6 @@ html#ublock0-epicker,
 #ublock0-epicker.preview #preview {
     background-color: var(--button-preferred-surface);
     color: var(--button-preferred-ink);
-}
-#ublock0-epicker #move {
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAECAYAAACtBE5DAAAAFElEQVQI12NgwAfKy8v/M5ANYLoBshgEyQo6H9UAAAAASUVORK5CYII=');
-    cursor: grab;
-    height: 1.5rem;
-    margin-bottom: 2px;
-    opacity: 0.8;
-    }
-#ublock0-epicker aside.moving #move {
-    cursor: grabbing;
 }
 #ublock0-epicker section {
     border: 0;
@@ -129,8 +125,8 @@ html#ublock0-epicker,
     );
     display: inline-block;
     flex-shrink: 0;
-    height: 16px;
-    width: 16px;
+    height: 20px;
+    width: 20px;
     }
 .resultsetModifier  > span > span:nth-of-type(3) {
     background-color: var(--surface-3);
@@ -174,7 +170,7 @@ html#ublock0-epicker,
     overflow: hidden;
 }
 #ublock0-epicker #candidateFilters {
-    max-height: min(14em, 20vh);
+    max-height: min(12em, 18vh);
     overflow-y: auto;
 }
 #ublock0-epicker .changeFilter > li > span:nth-of-type(1) {
@@ -211,32 +207,12 @@ html#ublock0-epicker,
     https://github.com/gorhill/uBlock/issues/3449
     https://github.com/uBlockOrigin/uBlock-issues/issues/55
 **/
-@keyframes startDialog {
-  0% { opacity: 1.0; }
-  60% { opacity: 1.0; }
-  100% { opacity: 0.1; }
-}
 #ublock0-epicker.paused aside {
-    opacity: 0.1;
     visibility: visible;
     z-index: 100;
 }
-#ublock0-epicker.paused:not(.show):not(.hide) aside:not(:hover) {
-    animation-duration: 1.6s;
-    animation-name: startDialog;
-    animation-timing-function: linear;
-}
-#ublock0-epicker.paused aside:hover {
-    opacity: 1;
-}
-#ublock0-epicker.paused.show aside {
-    opacity: 1;
-}
-#ublock0-epicker.paused.hide aside {
-    opacity: 0.1;
-}
 
-#ublock0-epicker svg {
+#ublock0-epicker svg#sea {
     cursor: crosshair;
     box-sizing: border-box;
     height: 100%;
@@ -245,26 +221,62 @@ html#ublock0-epicker,
     top: 0;
     width: 100%;
 }
-#ublock0-epicker.paused svg {
+#ublock0-epicker.paused svg#sea {
     cursor: not-allowed;
 }
-#ublock0-epicker svg > path:first-child {
+#ublock0-epicker svg#sea > path:first-child {
     fill: rgba(0,0,0,0.5);
     fill-rule: evenodd;
 }
-#ublock0-epicker svg > path + path {
+#ublock0-epicker svg#sea > path + path {
     stroke: #F00;
     stroke-width: 0.5px;
     fill: rgba(255,63,63,0.20);
 }
-#ublock0-epicker.zap svg > path + path {
+#ublock0-epicker.zap svg#sea > path + path {
     stroke: #FF0;
     stroke-width: 0.5px;
     fill: rgba(255,255,63,0.20);
 }
-#ublock0-epicker.preview svg > path {
+#ublock0-epicker.preview svg#sea > path {
     fill: rgba(0,0,0,0.10);
 }
-#ublock0-epicker.preview svg > path + path {
+#ublock0-epicker.preview svg#sea > path + path {
     stroke: none;
+}
+
+
+#ublock0-epicker #windowbar {
+    display: flex;
+}
+#ublock0-epicker #windowbar svg {
+    fill: none;
+    pointer-events: none;
+    stroke: var(--ink-1);
+    stroke-width: 3px;
+}
+#ublock0-epicker #windowbar #move {
+    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAECAYAAACtBE5DAAAAFElEQVQI12NgwAfKy8v/M5ANYLoBshgEyQo6H9UAAAAASUVORK5CYII=');
+    cursor: grab;
+    flex-grow: 1;
+    opacity: 0.8;
+}
+#ublock0-epicker aside.moving #windowbar #move {
+    cursor: grabbing;
+}
+#windowbar #quit,
+#windowbar #minimize {
+    height: 2em;
+    width: 2em;
+}
+#windowbar #quit:hover,
+#windowbar #minimize:hover {
+    background-color: var(--surface-2)
+}
+html.minimized #windowbar #minimize svg > path,
+#windowbar #minimize svg > rect {
+    display: none;
+}
+html.minimized #windowbar #minimize svg > rect {
+    display: initial;
 }
