--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -2,6 +2,7 @@ html, body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    height: 100svh;
     justify-content: stretch;
     overflow: hidden;
     position: relative;
