Keep search input field visuals consistent
Related feedback:
https://github.com/uBlockOrigin/uBlock-issues/issues/3161#issuecomment-1992340127

--- a/src/css/3p-filters.css
+++ b/src/css/3p-filters.css
@@ -54,23 +54,9 @@ body.working #actions button {
     transform: rotate(180deg);
     }
 
-#lists .searchbar {
-    align-items: center;
-    column-gap: var(--default-gap-xxsmall);
-    display: inline-flex;
+#lists .searchfield {
     margin-block-start: calc(var(--font-size) * 0.75);
     margin-inline-start: var(--checkbox-size);
-    position: relative;
-    }
-#lists .searchbar input {
-    padding-inline-start: var(--default-gap-large);
-    }
-#lists .searchbar .fa-icon {
-    color: var(--ink-4);
-        fill: var(--ink-4);
-    left: 4px;
-    position: absolute;
-    transform: none;
     }
 #lists.searchMode > .listEntries .listEntries,
 #lists.searchMode > .listEntries .listEntry.searchMatch {
