[mv3] Add support to add/remove rulesets through policies
Related discussion:
https://github.com/uBlockOrigin/uBOL-home/discussions/35#discussioncomment-11157444

New policy setting: `rulesets`
Type: array
Type of array items: string

Each item in the list is a list id (as seen in `rulesets/ruleset-details.json`),
prefixed with either `+` to enable the ruleset, or `-` to disable the ruleset.

Users will not be able to enable or disable rulesets present in the `rulesets`
policy. Disabled rulesets will not appear in the dashboard.

Use `-*` to remove all non-default rulesets, except for those added
using `+[ruleset_id]`.

Additionally, some work has been done to properly handle policy changes in
a non-blocking and deferred manner, as I observed that it often takes long
for calls to `storage.manage.get` to resolve. This potentailly takes care
of the following issue:
https://github.com/uBlockOrigin/uBOL-home/issues/174

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -114,10 +114,18 @@ h3[data-i18n="filteringMode0Name"]::first-letter {
 .groupEntry:not([data-groupkey="user"]) .listEntry:not(.isDefault).unused {
     display: none;
     }
+
+.listEntry.fromAdmin:has(input[disabled]:not(:checked)) {
+    display: none;
+    }
 .listEntry > * {
     margin-left: 0;
     margin-right: 0;
     unicode-bidi: embed;
+    }
+.listEntry .checkbox:has(input[disabled]),
+.listEntry .checkbox:has(input[disabled]) ~ span {
+    filter: var(--checkbox-disabled-filter);
     }
 .listEntry .listname {
     white-space: nowrap;
